--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             <hr>
             <h4>Links</h4>
                 <ul>
-                    <li><a href="https://github.com/leschtz" target="_blank">Github</a></li>  
+                    <li><a href="https://github.com/leschtz" target="_blank">Github</a></li>
+                    <li><a href="https://www.linkedin.com/in/leschtz">LinkedIn</a></li>
                 </ul>
             <hr>
             <h4>Contact</h4>
@@ -47,7 +48,7 @@
             <h2 id="about">About me</h2>
             <p>I am Lukas Schütz, a 21 year old computer science student <a href="https://www.tugraz.at" target="_blank">@TUGRAZ</a>. My interests related to my study is data collection and microcontrollers/embedded systems.</p>
             <p>Due to my summer job <a href="#maxim-2016">@Maxim Integrated</a> in summer 2016, I got a little insight into the second topic and knew I want to continue working within this area.</p>
-            <p>I love to do various soft skill seminars at my university. I see them as a huge benefit and try to improve my skills as team-player, presenter and speaker. As the english language is one of the most important lingua franca, I am doing an english course every semester. Estimated, I am somewhere in between B2 and C1. For further information, refer to my <a href="#coursework">Coursework</a>.</p>
+            <p>I love to do various soft skill seminars at my university. I see them as a huge benefit, and try to improve my skills as team-player, presenter and speaker. As the english language is one of the most important lingua franca, I am doing an english course every semester. Estimated, I am somewhere in between B2 and C1. For further information, refer to my <a href="#coursework">Coursework</a>.</p>
             <p>In my free time, I enjoy dancing - <a href="https://www.youtube.com/watch?v=oDZ4N7QyKFQ" target="_blank">Viennese Waltz</a> being my favourite, listening to music - especially soundtracks (<a href="https://www.youtube.com/watch?v=uwkLZg6WDek&list=PLco_u-O9FeQ_cV5gc3VdUHoQYBI73MYkU" target="_blank">Interstellar</a>, <a href="https://www.youtube.com/watch?v=VVAWi6K0JzY&list=PLC5350EAC549BB954" target="_blank">Splinter Cell</a> or <a href="https://www.youtube.com/watch?v=tVV7ijh01jo&list=PL480A36B593520453" target="_blank">Lord of the Rings</a>). From time to time, I play DotA2 or CS:GO with my friends.</p>
             <p>If you want to contact me, feel free to do this at any time: <a href="mailto:schuetz.lukas@sbg.at">schuetz.lukas[at]sbg.at</a>.</p>
             <div class="all-content">
@@ -58,7 +59,7 @@
                                 <p>AMTS Software Engineer | Graz, Austria<br>
                                    July 2016 - September 2016 | 12 Weeks</p>                               
                                 <hr>
-                                <ul>
+                                <ul class="work">
                                     <li>Embedded Firmware Test System | UML, OCL, Python</li>
                                     <li>SW GUI for Keyless-Go Reciever LF IC SD306 | Python, C++</li>
                                     <li>Maintain Equipment Database | MS Access</li>
@@ -151,7 +152,7 @@
                             <div class="items-outer">
                             <h4>Advanced</h4>
                             <ul class="items">
-                                <li>Driving License Car</li> &bull; <li>(FL)OSS Licenses</li>
+                                <li>Driving License Car</li> &bull; <li>basic knowledge of <a href="https://en.wikipedia.org/wiki/Open-source_license" target="_blank">(FL)OSS Licenses</a></li>
                             </ul>
                             </div>
                         </div>
