updated information regarding university/work experience

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Lukas Schütz">
         <meta charset="UTF-8">
-
         <link rel="stylesheet" media="screen and (max-width: 899px)" href="static/mobile-style.css">
         <link rel="stylesheet" media ="screen and (min-width: 900px)" href="static/style.css">
         <title>Lukas Schütz</title>
@@ -54,11 +53,24 @@
             <div class="all-content">
                 <h2 id="experience">Experience</h2>
                     <div class="semi-content">
+                        <h3 id="ams-2017">ams AG</h3>
+                            <div class="content">
+                                <p>Internship Software Development | Graz, Austria<br>
+                                   July 2017 - September 2017 | 13 Weeks</p>
+
+                                <ul class="work">
+                                    <li>Requirements Management</li>
+                                    <li>Developing templates and documents with the ReqIF Standard | ReqIF</li>
+                                    <li>Eclipse Plugin Development for ReqIF | Java, Eclipse</li>
+                                </ul>
+                            </div>
+                    </div>
+                    <hr>
+                    <div class="semi-content">
                         <h3 id="maxim-2016">Maxim Integrated</h3>
                             <div class="content">
                                 <p>AMTS Software Engineer | Graz, Austria<br>
                                    July 2016 - September 2016 | 12 Weeks</p>
-                                <hr>
                                 <ul class="work">
                                     <li>Embedded Firmware Test System | UML, OCL, Python</li>
                                     <li>SW GUI for Keyless-Go Reciever LF IC SD306 | Python, C++</li>
@@ -84,11 +96,14 @@
                                 <li>Databases</li> &bull; <li>Human-Computer Interaction</li> &bull; <li>Introduction to Knowledge Technologies</li> &bull; <li>Software Development Internship</li> &bull; <li>Computer Organization</li> &bull; <li>Discrete Mathematics</li>
                             </ul>
                             <ul class="items">
-                                <li>Probability for Computer Science</li> &bull; <li>Microcontroller</li> &bull; <li>Statistics for Computer Science</li> &bull; <li>Object-Oriented Analysis and Design</li>
+                                <li>Probability for Computer Science</li> &bull; <li>Microcontroller</li> &bull; <li>Statistics for Computer Science</li> &bull; <li>Object-Oriented Analysis and Design</li> &bull; <li>Systems Programming</li> &bull; <li>Data Structures & Algorithms</li> &bull; <li>Logic & Computability (Exercise)</li> &bull; <li>Logic and Logical Programming</li>
+                            </ul>
+                            <ul class="items">
+                              <li>Operating Systems</li> &bull; <li>Theoretical Informatics I (Exercise)</li>
                             </ul>
                             <h4>Optional</h4>
                             <ul class="items">
-                                <li>English for Technicians B2: Advanced & Oral</li> &bull; <li>Successful Rhetoric and Presentations</li> &bull; <li>Successful Teamwork in Projects</li> &bull; <li>Talking Behaviour, Discussion Techniques and Rhetoric</li>
+                                <li>English for Technicians B2: Advanced & Oral</li> &bull; <li>English for Technicans C1: Oral</li> &bull; <li>Successful Rhetoric and Presentations</li> &bull; <li>Successful Teamwork in Projects</li> &bull; <li>Talking Behaviour, Discussion Techniques and Rhetoric</li>
                             </ul>
                             </div>
                         </div>
@@ -118,11 +133,11 @@
                             <div class="items-outer">
                             <h4>Advanced</h4>
                             <ul class="items">
-                                <li>Python</li> &bull; <li>C</li> &bull; <li>C++</li>
+                                <li>Python</li> &bull; <li>C</li> &bull; <li>C++</li> &bull; <li>Java</li>
                             </ul>
                             <h4>Familiar</h4>
                             <ul class="items">
-                                <li>Assembly</li> &bull; <li>SQL</li> &bull; <li>JAVA</li> &bull; <li>Bash</li> &bull; <li>LaTeX</li> &bull; <li>git</li> &bull; <li>svn</li>
+                                <li>Assembly</li> &bull; <li>SQL</li> &bull; <li>Bash</li> &bull; <li>LaTeX</li> &bull; <li>git</li> &bull; <li>svn</li>
                             </ul>
                             </div>
                         </div>
@@ -150,9 +165,9 @@
                         <div class="content">
                             <hr>
                             <div class="items-outer">
-                            <h4>Advanced</h4>
+                            <h4></h4>
                             <ul class="items">
-                                <li>Driving License Car</li> &bull; <li>basic knowledge of <a href="https://en.wikipedia.org/wiki/Open-source_license" target="_blank">(FL)OSS Licenses</a></li>
+                                <li>Basic understanding of <a href="https://en.wikipedia.org/wiki/ISO/IEC_15504">Automotive SPICE</a></li> &bull; <li>Driving License Car</li> &bull; <li>basic knowledge of <a href="https://en.wikipedia.org/wiki/Open-source_license" target="_blank">(FL)OSS Licenses</a></li>
                             </ul>
                             </div>
                         </div>
