--- a/index.html
+++ b/index.html
@@ -1,197 +1,183 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-gb">
   <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="Lukas Schütz">
-        <meta charset="UTF-8">
-        <link rel="stylesheet" media="screen and (max-width: 899px)" href="static/mobile-style.css">
-        <link rel="stylesheet" media ="screen and (min-width: 900px)" href="static/style.css">
-        <title>Lukas Schütz</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Lukas Schütz" />
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <title>Experience | leschtz.me</title>
   </head>
+
   <body>
-    <div id="top">
-<!--
-        <div id="header">
-            <header></header>
-            <div class="placeholder-div"></div>
-        </div>
--->
-        <div class="col-1">
-            <nav>
-            <h4>Navigation</h4>
+    <div class="w3-row-padding">
+      <div class="w3-col" style="width: 8%; height: 10px"></div>
+      <div class="w3-col m10">
+        <nav class="w3-bar w3-mobile">
+          <a href="experience.html" class="w3-bar-item w3-large w3-button w3-hover-none w3-text-grey w3-hover-text-black">leschtz</a>
 
-                    <ul>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#experience">Experience</a></li>
-                        <li><a href="#education">Education</a></li>
-                        <li id="sub"><a href="#coursework">Coursework</a></li>
-                        <li><a href="#skills">Skills</a></li>
-                    </ul>
-
-            <hr>
-            <h4>Links</h4>
-                <ul>
-                    <li><a href="https://github.com/leschtz" target="_blank">Github</a></li>
-                    <li><a href="https://www.linkedin.com/in/leschtz" target="_blank">LinkedIn</a></li>
-                </ul>
-            <hr>
-            <h4>Contact</h4>
-                <ul>
-                    <li><a href="mailto:schuetz.lukas@sbg.at">Mail</a></li>
-                </ul>
-            <hr>
-            <a href="#top">[Back to top]</a>
+          <a href="https://github.com/leschtz" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black w3-right" target="_blank">github</a>
+          <a href="https://www.linkedin.com/in/leschtz/" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black w3-right" target="_blank"
+            >linkedin</a
+          >
+          <a href="experience.html" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black w3-right">experience</a>
         </nav>
+      </div>
+    </div>
+
+    <div class="w3-row-padding">
+      <div class="w3-col" style="width: 16%; height: 10px"></div>
+      <div class="w3-col m8">
+        <h1>Experience</h1>
+        <hr />
+      </div>
+    </div>
+
+    <div class="w3-row-padding">
+      <div class="w3-col" style="width: 16%; height: 10px"></div>
+      <div class="w3-col m4">
+        <div>
+          <ul class="w3-ul">
+            <li>
+              <h2>Employment</h2>
+            </li>
+            <li>
+              <h4><b>Senior Engineer</b></h4>
+              <div><span class="w3-large">ams-OSRAM AG</span> | <span class="w3-text-grey">Jan 2022 - Mar 2022 | Part-time</span></div>
+              <div>
+                <ul class="w3-ul">
+                  <li>Regression Management</li>
+                  <li>Process Improvement, Definition and Automation</li>
+                  <li>Tool Support</li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <h4><b>Graduate Engineer</b></h4>
+              <div><span class="w3-large">ams AG</span> | <span class="w3-text-grey">Apr 2020 - Jan 2022 | Part-time, Full-time</span></div>
+              <div>
+                <ul class="w3-ul">
+                  <li>Regression Management</li>
+                  <li>Process Improvement, Definition and Automation</li>
+                  <li>Tool Support</li>
+                  <li>Providing scripting services</li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <h4><b>Junior Engineer</b></h4>
+              <div><span class="w3-large">ams AG</span> | <span class="w3-text-grey">Feb 2018 - Apr 2020 | Part-time, Full-time</span></div>
+              <div>
+                <ul class="w3-ul">
+                  <li>Requirements Management</li>
+                  <li>Developing scripts for Design Verification</li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <h4><b>Internship</b></h4>
+              <div><span class="w3-large">ams AG</span> | <span class="w3-text-grey">Jul 2017 - Sep 2016, 13 Weeks</span></div>
+              <div>
+                <ul class="w3-ul">
+                  <li>Requirements Management</li>
+                  <li>Developing templates and documents with the ReqIF Standard</li>
+                  <li>Eclipse Plugin Development for ReqIF</li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <h4><b>Internship</b></h4>
+              <div><span class="w3-large">Maxim Integrated</span> | <span class="w3-text-grey">Jul 2016 - Sep 2016, 12 Weeks</span></div>
+              <div>
+                <ul class="w3-ul">
+                  <li>Embedded Firmware Test System</li>
+                  <li>SW GUI for Keyless-Go Receiver</li>
+                  <li>Maintain Equipment Database</li>
+                </ul>
+              </div>
+            </li>
+          </ul>
         </div>
-        <div class="col-2">
-            <h2 id="about">About me</h2>
-            <p>I am Lukas Schütz, a 21 year old computer science student <a href="https://www.tugraz.at" target="_blank">@TUGRAZ</a>. My interests related to my study is data collection and microcontrollers/embedded systems.</p>
-            <p>Due to my summer job <a href="#maxim-2016">@Maxim Integrated</a> in summer 2016, I got a little insight into the second topic and knew I want to continue working within this area.</p>
-            <p>I love to do various soft skill seminars at my university. I see them as a huge benefit, and try to improve my skills as team-player, presenter and speaker. As the english language is one of the most important lingua franca, I am doing an english course every semester. Estimated, I am somewhere in between B2 and C1. For further information, refer to my <a href="#coursework">Coursework</a>.</p>
-            <p>In my free time, I enjoy dancing - <a href="https://www.youtube.com/watch?v=oDZ4N7QyKFQ" target="_blank">Viennese Waltz</a> being my favourite, listening to music - especially soundtracks (<a href="https://www.youtube.com/watch?v=uwkLZg6WDek&list=PLco_u-O9FeQ_cV5gc3VdUHoQYBI73MYkU" target="_blank">Interstellar</a>, <a href="https://www.youtube.com/watch?v=VVAWi6K0JzY&list=PLC5350EAC549BB954" target="_blank">Splinter Cell</a> or <a href="https://www.youtube.com/watch?v=tVV7ijh01jo&list=PL480A36B593520453" target="_blank">Lord of the Rings</a>). From time to time, I play DotA2 or CS:GO with my friends.</p>
-            <p>If you want to contact me, feel free to do this at any time: <a href="mailto:schuetz.lukas@sbg.at">schuetz.lukas[at]sbg.at</a>.</p>
-            <div class="all-content">
-                <h2 id="experience">Experience</h2>
-                    <div class="semi-content">
-                        <h3 id="ams-2017">ams AG</h3>
-                            <div class="content">
-                                <p>Internship Software Development | Graz, Austria<br>
-                                   July 2017 - September 2017 | 13 Weeks</p>
-
-                                <ul class="work">
-                                    <li>Requirements Management</li>
-                                    <li>Developing templates and documents with the ReqIF Standard | ReqIF</li>
-                                    <li>Eclipse Plugin Development for ReqIF | Java, Eclipse</li>
-                                </ul>
-                            </div>
-                    </div>
-                    <hr>
-                    <div class="semi-content">
-                        <h3 id="maxim-2016">Maxim Integrated</h3>
-                            <div class="content">
-                                <p>AMTS Software Engineer | Graz, Austria<br>
-                                   July 2016 - September 2016 | 12 Weeks</p>
-                                <ul class="work">
-                                    <li>Embedded Firmware Test System | UML, OCL, Python</li>
-                                    <li>SW GUI for Keyless-Go Reciever LF IC SD306 | Python, C++</li>
-                                    <li>Maintain Equipment Database | MS Access</li>
-                                </ul>
-                            </div>
-                    </div>
-
-                <h2 id="education">Education</h2>
-                <div class="semi-content">
-                    <h3>Technical University</h3>
-                        <div class="content">
-                            Computer Science, Bachelor | Graz, Austria<br>
-                            since 2015
-                            <hr>
-                            <h3 id="coursework">Coursework</h3>
-                            <div class="items-outer">
-                            <h4>Mandatory</h4>
-                            <ul class="items">
-                                <li>Analysis T1</li> &bull; <li>Numerical Analysis and Linear Algebra</li> &bull; <li>Computer Mathematics 1</li> &bull; <li>Fundamentals of Computer Science</li> &bull; <li>Introduction to structural Programming</li>
-                            </ul>
-                            <ul class="items">
-                                <li>Databases</li> &bull; <li>Human-Computer Interaction</li> &bull; <li>Introduction to Knowledge Technologies</li> &bull; <li>Software Development Internship</li> &bull; <li>Computer Organization</li> &bull; <li>Discrete Mathematics</li>
-                            </ul>
-                            <ul class="items">
-                                <li>Probability for Computer Science</li> &bull; <li>Microcontroller</li> &bull; <li>Statistics for Computer Science</li> &bull; <li>Object-Oriented Analysis and Design</li> &bull; <li>Systems Programming</li> &bull; <li>Data Structures & Algorithms</li> &bull; <li>Logic & Computability (Exercise)</li> &bull; <li>Logic and Logical Programming</li>
-                            </ul>
-                            <ul class="items">
-                              <li>Operating Systems</li> &bull; <li>Theoretical Informatics I (Exercise)</li>
-                            </ul>
-                            <h4>Optional</h4>
-                            <ul class="items">
-                                <li>English for Technicians B2: Advanced & Oral</li> &bull; <li>English for Technicans C1: Oral</li> &bull; <li>Successful Rhetoric and Presentations</li> &bull; <li>Successful Teamwork in Projects</li> &bull; <li>Talking Behaviour, Discussion Techniques and Rhetoric</li>
-                            </ul>
-                            </div>
-                        </div>
-                    <h3>Bundesrealgymnasium</h3>
-                        <div class="content">
-                            Graduated with success | Hallein, Austria<br>
-                            2012 - 2015
-                        </div>
-                    <h3>Higher Technical College</h3>
-                        <div class="content">
-                            Electrical Engineering | Salzburg, Austria<br>
-                            2010 - 2012
-                        </div>
-                    <h3>Gymnasium</h3>
-                        <div class="content">
-                            Hallein, Austria<br>
-                            2006 - 2012
-                        </div>
-                </div>
-
-
-                <h2 id="skills">Skills</h2>
-                <div class="semi-content">
-                    <h3>Programming</h3>
-                        <div class="content">
-                            <hr>
-                            <div class="items-outer">
-                            <h4>Advanced</h4>
-                            <ul class="items">
-                                <li>Python</li> &bull; <li>C</li> &bull; <li>C++</li> &bull; <li>Java</li>
-                            </ul>
-                            <h4>Familiar</h4>
-                            <ul class="items">
-                                <li>Assembly</li> &bull; <li>SQL</li> &bull; <li>Bash</li> &bull; <li>LaTeX</li> &bull; <li>git</li> &bull; <li>svn</li>
-                            </ul>
-                            </div>
-                        </div>
-                    <h3>Soft</h3>
-                        <div class="content">
-                            <hr>
-                            <div class="items-outer">
-                            <ul class="items">
-                                <li>Communicative</li> &bull; <li>Team-Oriented</li> &bull; <li>Presentation Skills</li> &bull; <li>Well-structured</li> &bull; <li>Self-confident</li> &bull; <li>Reliable</li>
-                            </ul>
-                            </div>
-                        </div>
-                    <h3>Languages</h3>
-                        <div class="content">
-                            <hr>
-                            <div class="items-outer">
-                            <ul class="items">
-                                <li><strong>German:</strong> Native Speaker</li> <br>
-                                <li><strong>English:</strong> B2 - C1</li> <br>
-                                <li><strong>Spanish:</strong> B1</li>
-                            </ul>
-                            </div>
-                        </div>
-                    <h3>Others</h3>
-                        <div class="content">
-                            <hr>
-                            <div class="items-outer">
-                            <h4></h4>
-                            <ul class="items">
-                                <li>Basic understanding of <a href="https://en.wikipedia.org/wiki/ISO/IEC_15504">Automotive SPICE</a></li> &bull; <li>Driving License Car</li> &bull; <li>basic knowledge of <a href="https://en.wikipedia.org/wiki/Open-source_license" target="_blank">(FL)OSS Licenses</a></li>
-                            </ul>
-                            </div>
-                        </div>
-
-                </div>
-                <div class="placeholder-div"></div>
-            </div>
+      </div>
+      <div class="w3-col m4">
+        <div>
+          <ul class="w3-ul">
+            <li><h2>Education</h2></li>
+            <li>
+              <h4><b>Information and Computer Engineering</b></h4>
+              <div>
+                <span class="w3-large">Graz University of Technology</span> | <span class="w3-text-grey">MSc</span> |
+                <span class="w3-text-grey">Sep 2019 - Sep 2022</span>
+                <br />
+                <span>Austria</span>
+              </div>
+              <ul class="w3-ul">
+                <li>Major: Internet of Things</li>
+                <li>Minor: Embedded and Automotive Systems</li>
+              </ul>
+            </li>
+            <li>
+              <h4><b>Erasmus</b></h4>
+              <div>
+                <span class="w3-large">University of Patras</span> | <span class="w3-text-grey">Feb 2021 - Jun 2021</span> <br />
+                <span>Greece</span>
+              </div>
+            </li>
+            <li>
+              <h4><b>Computer Science</b></h4>
+              <div>
+                <span class="w3-large">Graz University of Technology</span> | <span class="w3-text-grey">BSc</span> |
+                <span class="w3-text-grey">Oct 2015 - Jun 2019</span>
+                <br />
+                <span>Austria</span>
+              </div>
+            </li>
+          </ul>
         </div>
         <div>
-            <footer>
-                <div id="footer">
-                <ul id="links-footer">
-                <li><a href="mailto:schuetz.lukas@sbg.at">Mail</a></li>
-                <li> &bull; </li>
-                <li><a href="https://github.com/leschtz" target="_blank">Github</a></li>
-                <li> &bull; </li>
-                <li><a href="https://www.linkedin.com/in/leschtz" target="_blank">LinkedIn</a></li>
-                </ul>
-                <ul id="footer-top">
-                <li><a href="#top">[Back to Top]</a></li>
-                </ul>
-                </div>
-            </footer>
+          <ul class="w3-ul">
+            <li><h2>Projects</h2></li>
+            <li>
+              <h4><b>Fitree</b></h4>
+              <div><span>Fitness</span> | <span>Tracking</span> | <span>Data Visualization</span></div>
+              <div>
+                <p>
+                  Fitree is a fitness tracker for Weight - Lifting. During my sports career, I became aware, comparison is a thief of joy, but how would I see
+                  my personal progress then?
+                </p>
+                <p>Fitree helps me to evaluate my fitness growth, by tracking my workouts and providing comparison features. But only with myself.</p>
+              </div>
+            </li>
+            <li>
+              <h4><b>Senf</b></h4>
+              <div><span>Productivity</span> | <span>Workspace Management</span></div>
+              <div>
+                <p>
+                  Senf is an acronym for Student Environment. With this collection of scripts, I create the workspaces for my semesters at university and the
+                  courses. The tool enables me to make certain tasks from the command-line easier, like copying multiple files to my currently enabled
+                  workspace.
+                </p>
+              </div>
+            </li>
+          </ul>
         </div>
+        <div>
+          <ul class="w3-ul">
+            <li><h2>Tech Stack</h2></li>
+            <li>
+              <ul class="w3-ul">
+                <li>Python, Shell, C, C++, HTML, JS</li>
+                <li>Flask, Jinja2, W3.CSS</li>
+                <li>git, svn, Jenkins, Docker, NGINX, MongoDB</li>
+                <li>Rest API, CI/CD</li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="w3-rest w3-green"></div>
+    </div>
+    <div class="w3-row-padding">
+      <div class="w3-col" style="width: 16%; height: 10px"></div>
     </div>
   </body>
 </html>
