--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       <div class="w3-col" style="width: 8%; height: 10px"></div>
       <div class="w3-col m10">
         <nav class="w3-bar w3-mobile">
-          <a href="experience.html" class="w3-bar-item w3-large w3-button w3-hover-none w3-text-grey w3-hover-text-black">leschtz</a>
+          <a href="index.html" class="w3-bar-item w3-large w3-button w3-hover-none w3-text-grey w3-hover-text-black">leschtz</a>
 
           <a href="https://github.com/leschtz" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black w3-right" target="_blank">github</a>
           <a href="https://www.linkedin.com/in/leschtz/" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black w3-right" target="_blank"
             >linkedin</a
           >
-          <a href="experience.html" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black w3-right">experience</a>
+          <a href="index.html" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black w3-right">experience</a>
         </nav>
       </div>
     </div>
