Removing 'week' information from internships

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </li>
             <li>
               <h4><b>Internship</b></h4>
-              <div><span class="w3-large">ams AG</span> | <span class="w3-text-grey">Jul 2017 - Sep 2016, 13 Weeks</span></div>
+              <div><span class="w3-large">ams AG</span> | <span class="w3-text-grey">Jul 2017 - Sep 2017</span></div>
               <div>
                 <ul class="w3-ul">
                   <li>Requirements Management</li>
@@ -86,7 +86,7 @@
             </li>
             <li>
               <h4><b>Internship</b></h4>
-              <div><span class="w3-large">Maxim Integrated</span> | <span class="w3-text-grey">Jul 2016 - Sep 2016, 12 Weeks</span></div>
+              <div><span class="w3-large">Maxim Integrated</span> | <span class="w3-text-grey">Jul 2016 - Sep 2016</span></div>
               <div>
                 <ul class="w3-ul">
                   <li>Embedded Firmware Test System</li>
