--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   <body>
     <div class="w3-row-padding">
-      <div class="w3-col" style="width: 8%; height: 10px"></div>
-      <div class="w3-col m10">
+      <div class="w3-col s0 m0 l1" style="height: 10px"></div>
+      <div class="w3-col s12 m12 l10">
         <nav class="w3-bar w3-mobile">
           <a href="index.html" class="w3-bar-item w3-large w3-button w3-hover-none w3-text-grey w3-hover-text-black">leschtz</a>
 
@@ -25,16 +25,16 @@
     </div>
 
     <div class="w3-row-padding">
-      <div class="w3-col" style="width: 16%; height: 10px"></div>
-      <div class="w3-col m8">
+      <div class="w3-col s0 m0 l1" style="height: 10px"></div>
+      <div class="w3-col s12 m12 l10">
         <h1>Experience</h1>
         <hr />
       </div>
     </div>
 
     <div class="w3-row-padding">
-      <div class="w3-col" style="width: 16%; height: 10px"></div>
-      <div class="w3-col m4">
+      <div class="w3-col s0 m0 l1" style="height: 10px"></div>
+      <div class="w3-col s11 m8 l5">
         <div>
           <ul class="w3-ul">
             <li>
@@ -98,7 +98,7 @@
           </ul>
         </div>
       </div>
-      <div class="w3-col m4">
+      <div class="w3-col s11 m8 l5">
         <div>
           <ul class="w3-ul">
             <li><h2>Education</h2></li>
@@ -174,10 +174,9 @@
           </ul>
         </div>
       </div>
-      <div class="w3-rest w3-green"></div>
     </div>
     <div class="w3-row-padding">
-      <div class="w3-col" style="width: 16%; height: 10px"></div>
+      <div class="w3-col s12 m12 l12" style="height: 10px"></div>
     </div>
   </body>
 </html>
