visual text updated

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <nav class="w3-bar w3-mobile">
           <a href="index.html" class="w3-bar-item w3-large w3-button w3-hover-none w3-text-grey w3-hover-text-black">leschtz</a>
 
-          <a href="https://github.com/leschtz" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black w3-right" target="_blank">github</a>
+          <a href="https://github.com/leschtz" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black w3-right" target="_blank">/github</a>
           <a href="https://www.linkedin.com/in/leschtz/" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black w3-right" target="_blank"
-            >linkedin</a
+            >/linkedin</a
           >
-          <a href="index.html" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black w3-right">experience</a>
+          <a href="index.html" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black w3-right">/experience</a>
         </nav>
       </div>
     </div>
