--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <a href="https://www.linkedin.com/in/leschtz/" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black w3-right" target="_blank"
             >/linkedin</a
           >
+          <a href="https://leschtz.github.io/blog" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black w3-right">/blog</a>
           <a href="index.html" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black w3-right">/experience</a>
         </nav>
       </div>
